--- a/docker/.env.template
+++ b/docker/.env.template
@@ -1,8 +1,7 @@
-MYSQLDB_HOST=172.17.0.2
 MYSQLDB_LOCAL_PORT=3306
-MYSQLDB_USER=postgres
+MYSQLDB_USER=root
 MYSQLDB_PASSWORD=root
-MYSQLDB_DATABASE=test
+MYSQLDB_DATABASE=mydatabase
 MYSQLDB_DOCKER_PORT=3306
 
 NESTJS_APP_LOCAL_PORT=3001
