--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "dotenv": "^16.0.3",
-    "pg": "^8.10.0",
+    "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.12"
