--- a/docker/.env.template
+++ b/docker/.env.template
@@ -1,9 +1,10 @@
-MYSQLDB_LOCAL_PORT=3306
-MYSQLDB_USER=root
-MYSQLDB_PASSWORD=root
-MYSQLDB_DATABASE=mydatabase
-MYSQLDB_DOCKER_PORT=3306
+DB_LOCAL_PORT=3307
+DB_USER=root
+DB_PASSWORD=root
+DB_DATABASE=dbname
+DB_DOCKER_PORT=3306
 
-NESTJS_APP_LOCAL_PORT=3001
-NESTJS_APP_DOCKER_PORT=3001
+NESTJS_APP_LOCAL_PORT=3000
+NESTJS_APP_DOCKER_PORT=3000
 
+SERVER_BASE_ASSETS_URL=http://localhost:3000/uploads
