--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,3 @@
-// ...existing code...
 {
   "singleQuote": true,
   "trailingComma": "all",
@@ -24,12 +23,7 @@
       }
     }
   ],
-  "importOrder": [
-    "^@nestjs/(.*)$",
-    "^@/(.*)$",
-    "<THIRD_PARTY_MODULES>",
-    "^[./]"
-  ],
+  "importOrder": ["^@nestjs/(.*)$", "^@/(.*)$", "<THIRD_PARTY_MODULES>", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
